--- a/back/.env.example
+++ b/back/.env.example
@@ -1,3 +1,10 @@
+ENV=development
+HOST=localhost
+PORT=8123
+FNAME_LOG_OUT=server.log
+JWT_SECRET=droyd
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
 POSTGRES_USER=user
 POSTGRES_PASSWORD=123
 POSTGRES_DB=squid
