--- a/back/.env.example
+++ b/back/.env.example
@@ -1,6 +1,7 @@
 ENV=development
 HOST=localhost
 PORT=8123
+SALT_ROUNDS=20 // troll
 FNAME_LOG_OUT=server.log
 JWT_SECRET=droyd
 POSTGRES_HOST=localhost
