--- a/back/.env.example
+++ b/back/.env.example
@@ -2,6 +2,8 @@ ENV=development
 HOST=localhost
 PORT=8123
 SALT_ROUNDS=20 // troll
+REFRESH_TOKEN_EXP_H=168
+ACCESS_TOKEN_EXP_M=15
 FNAME_LOG_OUT=server.log
 JWT_SECRET=droyd
 POSTGRES_HOST=localhost
